--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^3.3.3",
     "yamljs": "^0.3.0"
   }
 }
